# roguey

./: CMakeLists.txt  README.md
include/: dice.hpp  game.hpp  registry.hpp  renderer.hpp  script_engine.hpp  systems.hpp  types.hpp
include/types/: color.hpp  entity.hpp  game.hpp
scripts/: game.lua
scripts/class/: mage.lua  rogue.lua  warrior.lua
scripts/items/: gold.lua  healing_potion.lua  strength_potion.lua
scripts/levels/: dungeon.lua  forest.lua
scripts/spells/: fireball.lua
src/: color.cpp  dice.mpp  dungeon.cpp  dungeon.mpp  game.cpp  game.mpp  main.cpp  registry.cpp  registry.mpp  renderer.cpp  renderer.mpp  script_engine.cpp  script_engine.mpp  state_machine.cpp  state_machine.mpp  states.mpp  systems.cpp  systems.mpp  types.mpp
src/states/: dungeon.cpp  game_over.cpp  help.cpp  inventory.cpp  setup.cpp  stats.cpp  tick.cpp  victory.cpp
src/types/: color.cpp  color.mpp  entity.mpp  game.mpp  geometry.mpp  grid.mpp  items.mpp
